--- a/landing.css
+++ b/landing.css
@@ -31,6 +31,9 @@ body {
   padding-right: 15px;
 }
 
+.navbar-outer {
+    padding-right: 100px;
+}
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
