all sorts of random

--- a/source/templates/post.hbs
+++ b/source/templates/post.hbs
@@ -1,1 +1,11 @@
 {{> header}}
+
+
+<h2 class="blog-post-title">{{this.title}}</h2>
+<p class="blog-post-meta">{{this.date}} by {{this.author}}</p>
+{{this.contents}}
+
+
+
+
+{{> footer}}
