added wordpress posts and redirects

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#details">Details</a></li>
+                <!-- <li><a href="#details">Details</a></li> -->
                 <li><a href="#about">About Us</a></li>
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/support">Support</a></li>
@@ -369,7 +369,7 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-  
+
   <script>
     ! function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
