--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,17 +2,8 @@
 
   <body>
 
-    <div class="blog-masthead">
-      <div class="container">
-        <nav class="blog-nav">
-          <a class="blog-nav-item active" href="#">Home</a>
-          <a class="blog-nav-item" href="#">New features</a>
-          <a class="blog-nav-item" href="#">Press</a>
-          <a class="blog-nav-item" href="#">New hires</a>
-          <a class="blog-nav-item" href="#">About</a>
-        </nav>
-      </div>
-    </div>
+    {{> navbar}}
+
 
     <div class="container">
 
@@ -25,7 +16,7 @@
 
         <div class="col-sm-8 blog-main">
 
-          
+
         {{#each collections.posts}}
           <div class="blog-post">
             <h2 class="blog-post-title">{{this.title}}</h2>
