--- a/templates/index.html
+++ b/templates/index.html
@@ -62,48 +62,13 @@
   <link href="landing.css" rel="stylesheet">
 </head>
 
-<!-- NAVBAR
-================================================== -->
-
 <body>
 
-    <div class="navbar-wrapper">
-      <div class="container">
+  <!-- NAVBAR
+  ================================================== -->
 
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-          <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#"><img src="images/winsitter.png" /></a>
-            </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <!-- <li><a href="#details">Details</a></li> -->
-                <li><a href="#about">About Us</a></li>
-                <li><a href="/blog">Blog</a></li>
-                <li><a href="/support">Support</a></li>
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://dashboard.winsitter.com/">Login</a></li>
-                <li><a href="https://twitter.com/winsitter"><i class="fa fa-twitter fa-lg"></i></a></li>
-                <li><a href="https://facebook.com/winsitter"><i class="fa fa-facebook fa-lg"></i></a></li>
-                <li><a href="http://winsitter.com/feed.rss"><i class="fa fa-rss fa-lg"></i></a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-
-      </div>
-    </div>
+  {{> navbar}}
 
 
   <!-- Header
