crazy bunch-o-fixes

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,8 +8,9 @@
     <div class="container">
 
       <div class="blog-header">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
-        <p class="lead blog-description">The official example template of creating a blog with Bootstrap.</p>
+        <h1 class="blog-title">The Heartbeat Blog</h1>
+        <p class="lead blog-description">
+          Winsitter updates; Sysadmin discussions.</p>
       </div>
 
       <div class="row">
@@ -19,9 +20,12 @@
 
         {{#each collections.posts}}
           <div class="blog-post">
-            <h2 class="blog-post-title">{{this.title}}</h2>
+            <h2 class="blog-post-title">
+              <a href="/{{this.path}}">
+                {{this.title}}</a>
+            </h2>
             <p class="blog-post-meta">{{this.date}} by {{this.author}}</p>
-            {{this.contents}}
+            {{{this.contents}}}
           </div><!-- /.blog-post -->
         {{/each}}
 
