--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,18 +7,20 @@
   <meta name="description" content="Windows Server Monitoring Made Easy. We run the monitoring platform, you add your servers and control your notifications. Works with any Windows Server.">
   <link rel="shortcut icon" href="favicon.ico">
 
-  <title>Winsitter | Babysit Your Windows Servers: Monitor Onsite, Hosted, and Cloud In Only 5 Minutes</title>
+  <title>{{title}}</title>
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-<!-- Font AWESOME YO! -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+  <!-- Font AWESOME YO! -->
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+  <link rel="stylesheet" href="/css/{{css-template}}">
 
 </head>
