--- a/templates/post.html
+++ b/templates/post.html
@@ -3,7 +3,7 @@
 
 <h2 class="blog-post-title">{{this.title}}</h2>
 <p class="blog-post-meta">{{this.date}} by {{this.author}}</p>
-{{this.contents}}
+{{{this.contents}}}
 
 
 
