working on sitemap and css

--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Windows Server Monitoring Made Easy. We run the monitoring platform, you add your servers and control your notifications. Works with any Windows Server.">
   <link rel="shortcut icon" href="favicon.ico">
 
-  <title>{{title}}</title>
+  <title>{{title}} | Winsitter</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
