--- a/templates/post.html
+++ b/templates/post.html
@@ -1,11 +1,87 @@
 {{> header}}
 
+<body>
 
-<h2 class="blog-post-title">{{this.title}}</h2>
-<p class="blog-post-meta">{{this.date}} by {{this.author}}</p>
-{{{this.contents}}}
-
+  {{> navbar}}
 
 
+  <div class="container">
 
-{{> footer}}
+    <div class="blog-header">
+      <h1 class="blog-title">The Heartbeat Blog</h1>
+      <p class="lead blog-description">
+        Winsitter updates; Sysadmin discussions.</p>
+    </div>
+
+    <div class="row">
+
+      <div class="col-sm-8 blog-main">
+
+
+        <div class="blog-post">
+          <h2 class="blog-post-title">
+            <a href="/{{this.path}}">
+              {{this.title}}</a>
+          </h2>
+          <p class="blog-post-meta">{{this.date}} by {{this.author}}</p>
+          {{{this.contents}}}
+        </div><!-- /.blog-post -->
+
+
+      </div><!-- /.blog-main -->
+
+      <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+        <div class="sidebar-module sidebar-module-inset">
+          <h4>About</h4>
+          <p>Winsitter blog about our product, server monitoring, and sysadmin life</p>
+        </div>
+        <!-- <div class="sidebar-module">
+          <h4>Archives</h4>
+          <ol class="list-unstyled">
+            <li><a href="#">March 2014</a></li>
+            <li><a href="#">February 2014</a></li>
+            <li><a href="#">January 2014</a></li>
+            <li><a href="#">December 2013</a></li>
+            <li><a href="#">November 2013</a></li>
+            <li><a href="#">October 2013</a></li>
+            <li><a href="#">September 2013</a></li>
+            <li><a href="#">August 2013</a></li>
+            <li><a href="#">July 2013</a></li>
+            <li><a href="#">June 2013</a></li>
+            <li><a href="#">May 2013</a></li>
+            <li><a href="#">April 2013</a></li>
+          </ol>
+        </div> -->
+        <!-- <div class="sidebar-module">
+          <h4>Elsewhere</h4>
+          <ol class="list-unstyled">
+            <li><a href="#">GitHub</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Facebook</a></li>
+          </ol>
+        </div> -->
+      </div><!-- /.blog-sidebar -->
+
+    </div><!-- /.row -->
+
+  </div><!-- /.container -->
+
+  <div class="blog-footer">
+    <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+    <p>
+      <a href="#">Back to top</a>
+    </p>
+  </div>
+
+  {{> footer}}
+
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="../../dist/js/bootstrap.min.js"></script>
+  <script src="../../assets/js/docs.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+</body>
+</html>
