--- a/templates/blog.html
+++ b/templates/blog.html
@@ -30,10 +30,10 @@
         {{/each}}
 
 
-          <ul class="pager">
+          <!-- <ul class="pager">
             <li><a href="#">Previous</a></li>
             <li><a href="#">Next</a></li>
-          </ul>
+          </ul> -->
 
         </div><!-- /.blog-main -->
 
@@ -73,22 +73,11 @@
 
     </div><!-- /.container -->
 
-    <div class="blog-footer">
-      <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
-    </div>
+
 
     {{> footer}}
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/docs.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    
+
   </body>
 </html>
