suport/faq pages done

--- a/templates/page.html
+++ b/templates/page.html
@@ -4,9 +4,11 @@
 
     {{> navbar}}
 
-    <div class="container">
+    <div class="container my-container">
       <div class="row">
-          <h1 class="page-header">Support</h1>
+          <h1 class="page-header">{{this.title}}</h1>
+
+          {{{ this.contents }}}
 
       </div>
     </div>
