--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -3,20 +3,8 @@
  */
 
 body {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  color: #555;
-}
-
-h1, .h1,
-h2, .h2,
-h3, .h3,
-h4, .h4,
-h5, .h5,
-h6, .h6 {
-  margin-top: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: normal;
-  color: #333;
+  padding-top: 50px;
+  color: #5a5a5a;
 }
 
 
@@ -25,7 +13,7 @@ h6, .h6 {
  */
 
 @media (min-width: 1200px) {
-  .container {
+  .my-container {
     width: 970px;
   }
 }
