--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -5,7 +5,19 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
+  color: #5a5a5a;
 }
+
+/*
+ * Override Bootstrap's default container.
+ */
+
+@media (min-width: 1200px) {
+  .my-container {
+    width: 970px;
+  }
+}
+
 
 /*
  * Footer
