--- a/templates/post.html
+++ b/templates/post.html
@@ -5,7 +5,7 @@
   {{> navbar}}
 
 
-  <div class="container">
+  <div class="container my-container">
 
     <div class="blog-header">
       <h1 class="blog-title">The Heartbeat Blog</h1>
