--- a/templates/index.html
+++ b/templates/index.html
@@ -272,7 +272,8 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+  <script src="/js/detectVisible.js"></script>
+  <script src="/js/navbar.js"></script>
   <script>
     ! function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -284,6 +285,7 @@
       }
     }(document, "script", "twitter-wjs");
   </script>
+
 </body>
 
 </html>
