--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,11 +17,11 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
+            <li id="navHome"><a href="/#">Home</a></li>
             <!-- <li><a href="#details">Details</a></li> -->
-            <li><a href="/#about">About Us</a></li>
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/support">Support</a></li>
+            <li id="navAbout"><a href="/#about">About Us</a></li>
+            <li id="navBlog"><a href="/blog">Blog</a></li>
+            <li id="navSupport"><a href="/support">Support</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://dashboard.winsitter.com/">Login</a></li>
