--- a/templates/post.html
+++ b/templates/post.html
@@ -1,10 +1,8 @@
 {{> header}}
 
 <body>
-
   {{> navbar}}
-
-
+  <input type="hidden" id="isBlog" value="isBlog" />
   <div class="container">
 
     <div class="blog-header">
@@ -20,15 +18,20 @@
 
         <div class="blog-post">
           <h2 class="blog-post-title">
+
             <a href="/{{this.path}}">
+
               {{this.title}}</a>
+
           </h2>
           <p class="blog-post-meta">{{this.date}} by {{this.author}}</p>
           {{{this.contents}}}
-        </div><!-- /.blog-post -->
+        </div>
+        <!-- /.blog-post -->
 
 
-      </div><!-- /.blog-main -->
+      </div>
+      <!-- /.blog-main -->
 
       <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
         <div class="sidebar-module sidebar-module-inset">
@@ -60,30 +63,36 @@
             <li><a href="#">Facebook</a></li>
           </ol>
         </div> -->
-      </div><!-- /.blog-sidebar -->
+      </div>
+      <!-- /.blog-sidebar -->
 
-    </div><!-- /.row -->
+    </div>
+    <!-- /.row -->
 
     <div class="row">
       <div class="col-md-12">
         <div id="disqus_thread"></div>
-          <script type="text/javascript">
-              /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-              var disqus_shortname = 'winsitter'; // required: replace example with your forum shortname
+        <script type="text/javascript">
+          /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+          var disqus_shortname = 'winsitter'; // required: replace example with your forum shortname
 
-              /* * * DON'T EDIT BELOW THIS LINE * * */
-              (function() {
-                  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                  dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-              })();
-          </script>
-          <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-          <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+          /* * * DON'T EDIT BELOW THIS LINE * * */
+          (function() {
+            var dsq = document.createElement('script');
+            dsq.type = 'text/javascript';
+            dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+          })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+        </noscript>
+        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
       </div>
     </div>
 
-  </div><!-- /.container -->
+  </div>
+  <!-- /.container -->
 
 
   <div class="blog-footer">
@@ -94,14 +103,6 @@
   </div>
 
   {{> footer}}
-
-  <!-- Bootstrap core JavaScript
-  ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="../../dist/js/bootstrap.min.js"></script>
-  <script src="../../assets/js/docs.min.js"></script>
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
+
 </html>
