--- a/templates/index.html
+++ b/templates/index.html
@@ -202,6 +202,25 @@
 
     <hr class="featurette-divider">
 
+    <div class="row featurette" id="pricing">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Pricing</h2>
+      </div>
+      <div class="col-md-5">
+        <p class="lead" id="featureCheckList">
+          Get complete access to our growing list of detection items and pay a flat rate of
+        </p>
+        <p class="pricePop green">$9 per server</p>
+        <small>Interested in bulk pricing?  <a href="mailto:support@winsitter.com">Contact Us</a></small>
+        <br/><br/>
+        <p>
+          <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Signup for a Free Trial!</a>
+        </p>
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
     <!-- /END THE FEATURETTES -->
 
     <div id="about" class="container">
