--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,6 +19,7 @@
           <ul class="nav navbar-nav">
             <li id="navHome"><a href="/#">Home</a></li>
             <!-- <li><a href="#details">Details</a></li> -->
+            <li id="navPricing"><a href="/#pricing">Pricing</a></li>
             <li id="navAbout"><a href="/#about">About Us</a></li>
             <li id="navBlog"><a href="/blog">Blog</a></li>
             <li id="navSupport"><a href="/support">Support</a></li>
