--- a/templates/index.html
+++ b/templates/index.html
@@ -152,7 +152,8 @@
         <img class="featurette-image img-responsive" src="/images/big2.jpg" alt="Generic placeholder image">
       </div> -->
       <div class="col-md-7">
-        <h2 class="featurette-heading">Ever increasing list of <span class="text-muted">things we monitor on each server</span></h2>
+        <p class="pricePop green">$9 per server/mo</p>
+        <h2 class="featurette-heading">For an ever increasing list of <span class="text-muted">things we monitor on each server</span></h2>
       </div>
       <div class="col-md-5">
         <p class="lead" id="featureCheckList">
@@ -160,7 +161,8 @@
           <span><i class="fa fa-check-circle-o fa-2x green"></i> SSL Expiration</span><br/>
           <span><i class="fa fa-check-circle-o fa-2x green"></i> Pending Windows Updates</span><br/>
           <span><i class="fa fa-check-circle-o fa-2x green"></i> Unusual Memory and CPU Utilization</span><br/>
-          <span><i class="fa fa-check-circle-o fa-2x green"></i> and MORE!</span><br/>
+          <span><i class="fa fa-check-circle-o fa-2x green"></i> and MORE!</span><br/><br/>
+          <small>Interested in bulk pricing?  <a href="mailto:support@winsitter.com">Contact Us</a></small>
         </p>
         <p>
           <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Signup for a Free Trial!</a>
@@ -202,7 +204,7 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette" id="pricing">
+    <!-- <div class="row featurette" id="pricing">
       <div class="col-md-7">
         <h2 class="featurette-heading">Pricing</h2>
       </div>
@@ -219,7 +221,7 @@
       </div>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider"> -->
 
     <!-- /END THE FEATURETTES -->
 
