--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -203,6 +203,9 @@ body {
 .fa-featurette {
   font-size: 10em;
 }
+.twitterPicture {
+  
+}
 .pricePop {
   text-align: center;
   font-size: 60px;
