--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,7 @@
         <h2>Prevent Downtime</h2>
         <blockquote>
           <p>Winsitter alerted me about my hard drive filling up on a criticial server.  I was able to tame a runaway process.</p>
+          <img class="twitterPicture" src="https://pbs.twimg.com/profile_images/1828958563/me_normal.jpg" />
           <footer>Michael Carter - <a href="https://twitter.com/kiliman">@kiliman</a></footer>
         </blockquote>
         <!-- <p>
@@ -69,13 +70,14 @@
           <i class="fa fa-windows fa-2x colorOfWindows"></i>
         </span>
         <h2>Sleep Better Knowing You're Covered</h2>
-        <p class="lead">Imagine you're at home, enjoying dinner with your family and the support phone rings.  The CEO of the company tells you that he is not able to send any email.</p>
-        <p class="lead">Come to discover, one of the certificates on the mail server expired.  <b>Winsitter could have alerted you a month in advance</b> and prevented a late night email from the boss.</p>
+        <p class="lead">Imagine you're at dinner and the office help desk calls.  Users can't get to webmail without seeing a warning screen.</p>
+        <p class="lead">You discover your web mail server certificate expired.  <b>Winsitter could have alerted in advance</b> and prevented a late night outage.</p>
         <!-- <p>
             <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
         </p> -->
 
-      </div>
+
+     </div>
       <!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <span class="fa-stack fa-5x">
@@ -83,9 +85,11 @@
           <i class="fa fa-ambulance fa-stack-1x fa-inverse"></i>
         </span>
         <h2>Windows Server Monitoring-as-a-Service</h2>
-        <p class="lead">
-          Install our tiny agent on your Windows Server and start monitoring within minutes.
-        </p>
+        <blockquote>
+          Winsitter is pretty cool! The notification emails are going to really great for my team! Can&#39;t wait to see what is added.
+          <img class="twitterPicture" src="https://pbs.twimg.com/profile_images/378800000531450136/558b2c7713426da501570b9fb16d0fed_normal.jpeg" />
+          <footer>Grant Goodart - <a href="https://twitter.com/grantg81">@grantg81</a></footer>
+        </blockquote>
         <!-- <p>
           <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
         </p> -->
@@ -94,14 +98,6 @@
       <!-- /.col-lg-4 -->
     </div>
     <!-- /.row -->
-
-    <div class="container marketing" id="details">
-      <div class="row">
-        <div class="col-lg-4">
-          <blockquote class="twitter-tweet" lang="en"><p>New <a href="https://twitter.com/Winsitter">@Winsitter</a> is pretty cool! The notification emails are going to really great for my team! Can&#39;t wait to see what is added.</p>&mdash; Grant Goodart (@grantg81) <a href="https://twitter.com/grantg81/status/434552335423905794">February 15, 2014</a></blockquote>
-        </div>
-      </div>
-    </div>
 
 
 
