--- a/templates/index.html
+++ b/templates/index.html
@@ -54,11 +54,11 @@
           <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
         </span>
         <h2>Prevent Downtime</h2>
-        <blockquote>
-          <p>Winsitter alerted me about my hard drive filling up on a criticial server.  I was able to tame a runaway process.</p>
+        <span class="lead quoted">
+          <p>"Winsitter alerted me about my hard drive filling up on a criticial server.  I was able to tame a runaway process."</p>
           <img class="twitterPicture" src="https://pbs.twimg.com/profile_images/1828958563/me_normal.jpg" />
           <footer>Michael Carter - <a href="https://twitter.com/kiliman">@kiliman</a></footer>
-        </blockquote>
+        </span>
         <!-- <p>
             <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
         </p> -->
@@ -85,11 +85,11 @@
           <i class="fa fa-ambulance fa-stack-1x fa-inverse"></i>
         </span>
         <h2>Windows Server Monitoring-as-a-Service</h2>
-        <blockquote>
-          Winsitter is pretty cool! The notification emails are going to really great for my team! Can&#39;t wait to see what is added.
+        <span class="lead quoted">
+          "Winsitter is pretty cool! The notification emails are going to really great for my team! Can&#39;t wait to see what is added."
           <img class="twitterPicture" src="https://pbs.twimg.com/profile_images/378800000531450136/558b2c7713426da501570b9fb16d0fed_normal.jpeg" />
           <footer>Grant Goodart - <a href="https://twitter.com/grantg81">@grantg81</a></footer>
-        </blockquote>
+        </span>
         <!-- <p>
           <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
         </p> -->
