--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
           <i class="fa fa-circle fa-stack-2x colorOfJoesPants"></i>
           <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
         </span>
-        <h2>Prevent Downtime</h2>
+        <h2>Prevent Downtime with Mobile Alerts</h2>
         <span class="lead quoted">
           <p>"Winsitter alerted me about my hard drive filling up on a criticial server.  I was able to tame a runaway process."</p>
           <img class="twitterPicture" src="https://pbs.twimg.com/profile_images/1828958563/me_normal.jpg" />
