--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,21 +1,6 @@
-/*
- * Globals
- */
-
+/* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
-  color: #5a5a5a;
-}
-
-
-/*
- * Override Bootstrap's default container.
- */
-
-@media (min-width: 1200px) {
-  .my-container {
-    width: 970px;
-  }
 }
 
 
@@ -136,20 +121,4 @@ body {
 .blog-post-meta {
   margin-bottom: 20px;
   color: #999;
-}
-
-
-/*
- * Footer
- */
-
-.blog-footer {
-  padding: 40px 0;
-  color: #999;
-  text-align: center;
-  background-color: #f9f9f9;
-  border-top: 1px solid #e5e5e5;
-}
-.blog-footer p:last-child {
-  margin-bottom: 0;
 }
