--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,12 +1,40 @@
-<div class="blog-footer">
-  <p>Blog template built for
-    <a href="http://getbootstrap.com">Bootstrap</a> by
-    <a href="https://twitter.com/mdo">@mdo</a>.</p>
-  <p>
-    <a href="#">Back to top</a>
-  </p>
-</div>
+<br/><br/>
+<footer class="blog-footer">
+  <div class="container">
+    <div class="row">
 
+      <div class="col-lg-4 col-md-4">
+        <h3>About</h3>
+        <p>
+          <a href="/">Home</a><br/>
+          <a href="/#pricing">Pricing</a><br/>
+          <a href="/#about-us">About Us</a><br/>
+          <a href="/blog">Blog</a><br/>
+          <a href="/support">Support</a><br/>
+        </p>
+      </div>
+
+      <div class="col-lg-4 col-md-4">
+        <h3>Get Started</h3>
+        <p>
+          <a href="https://dashboard.winsitter.com/signup">Signup!</a><br/>
+          <a href="https://dashboard.winsitter.com/">Login</a><br/>
+          <a href="/faq">FAQ</a>
+        </p>
+      </div>
+
+      <div class="col-lg-4 col-md-4">
+        <h3>Contact Us</h3>
+        <p>
+          <a href="https://twitter.com/winsitter"><i class="fa fa-twitter fa-lg"></i> @winsitter on Twitter</a><br/>
+          <a href="https://facebook.com/winsitter"><i class="fa fa-facebook fa-lg"></i> Winsitter on Facebook</a><br/>
+          &copy; Winsitter, Inc.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</footer>
 
 
 <!-- Bootstrap core JavaScript
