--- a/templates/header.html
+++ b/templates/header.html
@@ -21,6 +21,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+  <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/{{css-template}}">
 
 </head>
