--- a/templates/index.html
+++ b/templates/index.html
@@ -250,27 +250,13 @@
     </div>
 
 
-    <!-- FOOTER -->
-    <footer>
-      <p class="pull-right">
-        <a href="#">Back to top</a>
-      </p>
-      <p>&copy; Winsitter, Inc. &middot;
-        <a href="#">Privacy</a>&middot;
-        <a href="#">Terms</a>
-      </p>
-    </footer>
-
   </div>
   <!-- /.container -->
 
 
-  <!-- Bootstrap core JavaScript
-    ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  {{> footer}}
+
+
   <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
   <script>
