--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -27,7 +27,7 @@
             <li><a href="https://dashboard.winsitter.com/">Login</a></li>
             <li><a href="https://twitter.com/winsitter"><i class="fa fa-twitter fa-lg"></i></a></li>
             <li><a href="https://facebook.com/winsitter"><i class="fa fa-facebook fa-lg"></i></a></li>
-            <li><a href="/feed.xml"><i class="fa fa-rss fa-lg"></i></a></li>
+            <!-- <li><a href="/feed.xml"><i class="fa fa-rss fa-lg"></i></a></li> -->
           </ul>
         </div>
       </div>
