--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,6 @@
 
   <!-- NAVBAR
   ================================================== -->
-
-
   {{> navbar}}
 
 
@@ -99,7 +97,7 @@
         <h2>Windows Server Monitoring-as-a-Service</h2>
         <span class="lead quoted">
 
-          "Winsitter is pretty cool! The notification emails are going to really great for my team! Can&#39;t wait to see what is added."
+          "Winsitter is pretty cool! The notification emails are going to be really great for my team! Can&#39;t wait to see what is added."
 
           <img class="twitterPicture" src="https://pbs.twimg.com/profile_images/378800000531450136/558b2c7713426da501570b9fb16d0fed_normal.jpeg" />
 
@@ -206,7 +204,8 @@
       <div class="col-md-7 col-md-pull-5">
         <!-- <h2 class="featurette-heading">No additional infrastructure needed <span class="text-muted"> for monitoring</span></h2> -->
         <p class="lead">
-          We created Winsitter in a way that removes the complexity of setting up monitoring and mobile alerts. Anyone can signup, easily install the agent, and sleep better knowing they’ll be notified of issues.
+          We created Winsitter in a way that removes the complexity of server monitoring and enabling mobile alerts.
+          Anyone can signup, easily install the agent, and sleep better knowing they’ll be notified of issues.
           <br />
           <span><i class="fa fa-thumbs-up fa-2x colorOfWindows"></i> No extra servers required.</span>
           <br />
