fixed marketing under index heading

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
   <div class="container marketing" id="details">
     <!-- Three columns of text below the carousel -->
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-4">
         <span class="fa-stack fa-5x">
 
           <i class="fa fa-circle fa-stack-2x colorOfJoesPants"></i>
@@ -56,60 +56,41 @@
         </span>
         <h2>Prevent Downtime with Mobile Alerts</h2>
         <span class="lead quoted">
-
-          <p>"Winsitter alerted me about my hard drive filling up on a criticial server.  I was able to tame a runaway process."</p>
-
+          <p>"Winsitter alerted me about my hard drive filling up on a criticial server.
+            I was able to tame a runaway process."</p>
           <img class="twitterPicture" src="https://pbs.twimg.com/profile_images/1828958563/me_normal.jpg" />
-
           <footer>Michael Carter - <a href="https://twitter.com/kiliman">@kiliman</a></footer>
-
         </span>
-        <!-- <p>
-            <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-        </p> -->
 
       </div>
       <!-- /.col-lg-4 -->
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-4">
         <span class="fa-stack fa-5x">
-
           <i class="fa fa-windows fa-2x colorOfWindows"></i>
-
         </span>
         <h2>Sleep Better Knowing You're Covered</h2>
-        <p class="lead">Imagine you're at dinner and the office help desk calls. Users can't get to webmail without seeing a warning screen.</p>
-        <p class="lead">You discover your web mail server certificate expired. <b>Winsitter could have alerted in advance</b> and prevented a late night outage.</p>
-        <!-- <p>
-            <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-        </p> -->
-
-
+        <p class="lead">Imagine you're at dinner and the office help desk calls.
+          Users can't get to webmail without seeing a warning screen.</p>
+        <p class="lead">You discover your web mail server certificate expired.
+          <b>Winsitter could have alerted in advance</b> and prevented a late night outage.</p>
       </div>
+
       <!-- /.col-lg-4 -->
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-4">
         <span class="fa-stack fa-5x">
-
           <i class="fa fa-circle fa-stack-2x colorOfJoesPants"></i>
-
           <i class="fa fa-ambulance fa-stack-1x fa-inverse"></i>
-
         </span>
         <h2>Windows Server Monitoring-as-a-Service</h2>
         <span class="lead quoted">
-
-          "Winsitter is pretty cool! The notification emails are going to be really great for my team! Can&#39;t wait to see what is added."
-
+          <p>"Winsitter is pretty cool! The notification emails are going to be
+            really great for my team! Can&#39;t wait to see what is added."</p>
           <img class="twitterPicture" src="https://pbs.twimg.com/profile_images/378800000531450136/558b2c7713426da501570b9fb16d0fed_normal.jpeg" />
-
           <footer>Grant Goodart - <a href="https://twitter.com/grantg81">@grantg81</a></footer>
-
         </span>
-        <!-- <p>
-          <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-        </p> -->
-
       </div>
       <!-- /.col-lg-4 -->
+
     </div>
     <!-- /.row -->
 
