--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
       <div class="col-lg-4 col-md-4">
         <span class="fa-stack fa-5x">
 
-          <i class="fa fa-circle fa-stack-2x colorOfJoesPants"></i>
+          <i class="fa fa-circle fa-stack-2x wsBlue"></i>
 
           <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
 
@@ -78,7 +78,7 @@
       <!-- /.col-lg-4 -->
       <div class="col-lg-4 col-md-4">
         <span class="fa-stack fa-5x">
-          <i class="fa fa-circle fa-stack-2x colorOfJoesPants"></i>
+          <i class="fa fa-circle fa-stack-2x wsBlue"></i>
           <i class="fa fa-ambulance fa-stack-1x fa-inverse"></i>
         </span>
         <h2>Windows Server Monitoring-as-a-Service</h2>
@@ -145,23 +145,23 @@
         <img class="featurette-image img-responsive" src="/images/big2.jpg" alt="Generic placeholder image">
       </div> -->
       <div class="col-md-7">
-        <p class="pricePop green">$9 per server/mo</p>
+        <p class="pricePop wsOrange">$9 per server/mo</p>
         <h2 class="featurette-heading">For an ever increasing list of <span class="text-muted">things we monitor on each server</span></h2>
       </div>
       <div class="col-md-5">
         <p class="lead" id="featureCheckList">
-          <span><i class="fa fa-check-circle-o fa-2x green"></i> Heartbeat detection</span>
+          <span><i class="fa fa-check-circle-o fa-2x wsOrange"></i> Heartbeat detection</span>
           <br/>
-          <span><i class="fa fa-check-circle-o fa-2x green"></i> SSL Expiration</span>
+          <span><i class="fa fa-check-circle-o fa-2x wsOrange"></i> SSL Expiration</span>
           <br/>
-          <span><i class="fa fa-check-circle-o fa-2x green"></i> Pending Windows Updates</span>
+          <span><i class="fa fa-check-circle-o fa-2x wsOrange"></i> Pending Windows Updates</span>
           <br/>
-          <span><i class="fa fa-check-circle-o fa-2x green"></i> Unusual Memory and CPU Utilization</span>
+          <span><i class="fa fa-check-circle-o fa-2x wsOrange"></i> Unusual Memory and CPU Utilization</span>
           <br/>
-          <span><i class="fa fa-check-circle-o fa-2x green"></i> and MORE!</span>
+          <span><i class="fa fa-check-circle-o fa-2x wsOrange"></i> and MORE!</span>
           <br/>
           <br/>
-          <small>Interested in bulk pricing?  <a href="mailto:support@winsitter.com">Contact Us</a></small>
+          <small>Interested in bulk pricing?  <a href="/support">Contact Us</a></small>
         </p>
         <p>
           <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Signup for a Free Trial!</a>
@@ -188,11 +188,11 @@
           We created Winsitter in a way that removes the complexity of server monitoring and enabling mobile alerts.
           Anyone can signup, easily install the agent, and sleep better knowing they’ll be notified of issues.
           <br />
-          <span><i class="fa fa-thumbs-up fa-2x colorOfWindows"></i> No extra servers required.</span>
+          <span><i class="fa fa-thumbs-up fa-2x wsBlue"></i> No extra servers required.</span>
           <br />
-          <span><i class="fa fa-thumbs-up fa-2x colorOfWindows"></i> Automatically updates.</span>
+          <span><i class="fa fa-thumbs-up fa-2x wsBlue"></i> Automatic updates.</span>
           <br />
-          <span><i class="fa fa-thumbs-up fa-2x colorOfWindows"></i> No PhD required.</span>
+          <span><i class="fa fa-thumbs-up fa-2x wsBlue"></i> No PhD required.</span>
           <br />
         </p>
 
@@ -213,7 +213,7 @@
         <p class="lead" id="featureCheckList">
           Get complete access to our growing list of detection items and pay a flat rate of
         </p>
-        <p class="pricePop green">$9 per server</p>
+        <p class="pricePop wsOrange">$9 per server</p>
         <small>Interested in bulk pricing?  <a href="mailto:support@winsitter.com">Contact Us</a></small>
         <br/><br/>
         <p>
