--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img src="/images/winsitter.png" /></a>
+          <a class="navbar-brand" href="/"><img src="/images/winsitter.png" height="30px" /></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
