trying to fix GA and goal tracking

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 
           <br />
           <p>
-            <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Signup for a Free Trial!</a>
+            <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button" onclick="trackOutboundLink('https://dashboard.winsitter.com/signup'); return false;">Signup for a Free Trial!</a>
           </p>
         </div>
       </div>
@@ -132,7 +132,7 @@
       <div class="col-md-4">
         <span id="pricing">&nbsp;</span>
         <p>
-          <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Signup for a Free Trial!</a>
+          <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button" onclick="trackOutboundLink('https://dashboard.winsitter.com/signup'); return false;">Signup for a Free Trial!</a>
         </p>
       </div>
     </div>
@@ -164,7 +164,7 @@
           <small>Interested in bulk pricing?  <a href="/support">Contact Us</a></small>
         </p>
         <p>
-          <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Signup for a Free Trial!</a>
+          <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button" onclick="trackOutboundLink('https://dashboard.winsitter.com/signup'); return false;">Signup for a Free Trial!</a>
         </p>
       </div>
     </div>
@@ -197,7 +197,7 @@
         </p>
 
         <p>
-          <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button">Signup for a Free Trial!</a>
+          <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button" onclick="trackOutboundLink('https://dashboard.winsitter.com/signup'); return false;">Signup for a Free Trial!</a>
         </p>
 
       </div>
