--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,7 +25,7 @@
             <li id="navSupport"><a href="/support">Support</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="https://dashboard.winsitter.com/">Login</a></li>
+            <li><a href="https://dashboard.winsitter.com/" onclick="trackOutboundLink('https://dashboard.winsitter.com/'); return false;">Login</a></li>
             <li><a href="https://twitter.com/winsitter"><i class="fa fa-twitter fa-lg"></i></a></li>
             <li><a href="https://facebook.com/winsitter"><i class="fa fa-facebook fa-lg"></i></a></li>
             <!-- <li><a href="/feed.xml"><i class="fa fa-rss fa-lg"></i></a></li> -->
