--- a/templates/footer.html
+++ b/templates/footer.html
@@ -17,8 +17,8 @@
       <div class="col-lg-4 col-md-4">
         <h3>Get Started</h3>
         <p>
-          <a href="https://dashboard.winsitter.com/signup">Signup!</a><br/>
-          <a href="https://dashboard.winsitter.com/">Login</a><br/>
+          <a href="https://dashboard.winsitter.com/signup" onclick="trackOutboundLink('https://dashboard.winsitter.com/signup'); return false;">Signup!</a><br/>
+          <a href="https://dashboard.winsitter.com/" onclick="trackOutboundLink('https://dashboard.winsitter.com/'); return false;">Login</a><br/>
           <a href="/faq">FAQ</a>
         </p>
       </div>
@@ -59,5 +59,19 @@
   })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
   ga('create', 'UA-28705678-4', 'auto');
+  ga('require', 'linkid', 'linkid.js');
   ga('send', 'pageview');
+
+  /**
+  * Function that tracks a click on an outbound link in Google Analytics.
+  * This function takes a valid URL string as an argument, and uses that URL string
+  * as the event label.
+  */
+  var trackOutboundLink = function(url) {
+     ga('send', 'event', 'outbound', 'click', url, {'hitCallback':
+       function () {
+       document.location = url;
+       }
+     });
+  }
 </script>
