--- a/templates/header.html
+++ b/templates/header.html
@@ -30,7 +30,7 @@
     * as the event label.
     */
     var trackOutboundLink = function(url) {
-       ga('send', 'event', 'outbound', 'click', url, {'hitCallback':
+       ga('send', 'event', 'signup', 'click', url, {'hitCallback':
          function () {
          document.location = url;
          }
