--- a/templates/header.html
+++ b/templates/header.html
@@ -23,6 +23,22 @@
 
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/{{css-template}}">
+  <!-- Google Universal Analytics -->
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-28705678-4', 'auto');
+    ga('require', 'linkid', 'linkid.js');
+    ga('send', 'pageview');
+  </script>
   <script>
     /**
     * Function that tracks a click on an outbound link in Google Analytics.
@@ -32,7 +48,7 @@
     var trackOutboundLink = function(url) {
        ga('send', 'event', 'signup', 'click', url, {'hitCallback':
          function () {
-         document.location = url;
+           document.location = url;
          }
        });
     }
