--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-lg-4 col-md-4">
+      <div class="col-sm-4">
         <h3>About</h3>
         <p>
           <a href="/">Home</a><br/>
@@ -14,7 +14,7 @@
         </p>
       </div>
 
-      <div class="col-lg-4 col-md-4">
+      <div class="col-sm-4">
         <h3>Get Started</h3>
         <p>
           <a href="https://dashboard.winsitter.com/signup" onclick="trackOutboundLink('https://dashboard.winsitter.com/signup'); return false;">Signup!</a><br/>
@@ -23,7 +23,7 @@
         </p>
       </div>
 
-      <div class="col-lg-4 col-md-4">
+      <div class="col-sm-4">
         <h3>Contact Us</h3>
         <p>
           <a href="https://twitter.com/winsitter"><i class="fa fa-twitter fa-lg"></i> @winsitter on Twitter</a><br/>
