--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,6 @@
         <div class="col-md-6">
           <h1>Simple Windows Server Monitoring</h1>
           <h2>Relax! Winsitter is here to help.</h2>
-
           <br />
           <p>
             <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button" onclick="trackOutboundLink('https://dashboard.winsitter.com/signup'); return false;">Signup for a Free Trial!</a>
@@ -46,7 +45,7 @@
   <div class="container marketing" id="details">
     <!-- Three columns of text below the carousel -->
     <div class="row">
-      <div class="col-lg-4 col-md-4">
+      <div class="col-sm-4">
         <span class="fa-stack fa-5x">
 
           <i class="fa fa-circle fa-stack-2x wsBlue"></i>
@@ -55,16 +54,16 @@
 
         </span>
         <h2>Prevent Downtime with Mobile Alerts</h2>
-        <span class="lead quoted">
-          <p>"Winsitter alerted me about my hard drive filling up on a criticial server.
-            I was able to tame a runaway process."</p>
+        <span class="lead">
+          <p><em>"Winsitter alerted me about my hard drive filling up on a criticial server.
+            I was able to tame a runaway process."</em></p>
           <img class="twitterPicture" src="https://pbs.twimg.com/profile_images/1828958563/me_normal.jpg" />
           <footer>Michael Carter - <a href="https://twitter.com/kiliman">@kiliman</a></footer>
         </span>
 
       </div>
-      <!-- /.col-lg-4 -->
-      <div class="col-lg-4 col-md-4">
+
+      <div class="col-sm-4">
         <span class="fa-stack fa-5x">
           <i class="fa fa-windows fa-2x colorOfWindows"></i>
         </span>
@@ -75,16 +74,15 @@
           <b>Winsitter could have alerted in advance</b> and prevented a late night outage.</p>
       </div>
 
-      <!-- /.col-lg-4 -->
-      <div class="col-lg-4 col-md-4">
+      <div class="col-sm-4">
         <span class="fa-stack fa-5x">
           <i class="fa fa-circle fa-stack-2x wsBlue"></i>
           <i class="fa fa-ambulance fa-stack-1x fa-inverse"></i>
         </span>
         <h2>Windows Server Monitoring-as-a-Service</h2>
-        <span class="lead quoted">
-          <p>"Winsitter is pretty cool! The notification emails are going to be
-            really great for my team! Can&#39;t wait to see what is added."</p>
+        <span class="lead">
+          <p><em>"Winsitter is pretty cool! The notification emails are going to be
+            really great for my team! Can&#39;t wait to see what is added."</em></p>
           <img class="twitterPicture" src="https://pbs.twimg.com/profile_images/378800000531450136/558b2c7713426da501570b9fb16d0fed_normal.jpeg" />
           <footer>Grant Goodart - <a href="https://twitter.com/grantg81">@grantg81</a></footer>
         </span>
@@ -102,15 +100,15 @@
     <hr class="featurette-divider">
 
     <!-- <div class="row featurette">
-      <div class="col-md-12">
+      <div class="col-sm-12">
         <h2 class="featurette-heading">Free trial with <span class="text-muted">amazingly fast install</span></h2>
       </div>
     </div> -->
     <div class="row featurette">
-      <div class="col-md-7 col-md-push-5">
+      <div class="col-sm-7 col-sm-push-5">
         <h2 class="featurette-heading">Free trial with <span class="text-muted">amazingly fast install</span></h2>
       </div>
-      <div class="col-md-5 col-md-pull-7">
+      <div class="col-sm-5 col-sm-pull-7">
         <p class="lead">
           No gigabyte downloads.
           <br />No complicated configurations.
@@ -141,14 +139,14 @@
     <hr class="featurette-divider">
 
     <div class="row featurette">
-      <!-- <div class="col-md-5">
+      <!-- <div class="col-sm-5">
         <img class="featurette-image img-responsive" src="/images/big2.jpg" alt="Generic placeholder image">
       </div> -->
-      <div class="col-md-7">
+      <div class="col-sm-7">
         <p class="pricePop wsOrange">$9 per server/mo</p>
         <h2 class="featurette-heading">For an ever increasing list of <span class="text-muted">things we monitor on each server</span></h2>
       </div>
-      <div class="col-md-5">
+      <div class="col-sm-5">
         <p class="lead" id="featureCheckList">
           <span><i class="fa fa-check-circle-o fa-2x wsOrange"></i> Heartbeat detection</span>
           <br/>
@@ -172,17 +170,17 @@
     <hr class="featurette-divider">
 
     <div class="row featurette">
-      <!-- <div class="col-md-5 col-md-push-7">
+      <!-- <div class="col-sm-5 col-sm-push-7">
         <img class="featurette-image img-responsive" src="/images/big3.jpg" alt="Generic placeholder image">
           <span class="fa-stack fa-featurette">
            <i class="fa fa-building fa-stack-1x"></i>
            <i class="fa fa-ban fa-stack-2x text-danger"></i>
           </span>
       </div> -->
-      <div class="col-md-5 col-md-push-7">
+      <div class="col-sm-5 col-sm-push-7">
         <h2 class="featurette-heading">No additional infrastructure needed <span class="text-muted"> for monitoring</span></h2>
       </div>
-      <div class="col-md-7 col-md-pull-5">
+      <div class="col-sm-7 col-sm-pull-5">
         <!-- <h2 class="featurette-heading">No additional infrastructure needed <span class="text-muted"> for monitoring</span></h2> -->
         <p class="lead">
           We created Winsitter in a way that removes the complexity of server monitoring and enabling mobile alerts.
@@ -206,10 +204,10 @@
     <hr class="featurette-divider">
 
     <!-- <div class="row featurette" id="pricing">
-      <div class="col-md-7">
+      <div class="col-sm-7">
         <h2 class="featurette-heading">Pricing</h2>
       </div>
-      <div class="col-md-5">
+      <div class="col-sm-5">
         <p class="lead" id="featureCheckList">
           Get complete access to our growing list of detection items and pay a flat rate of
         </p>
@@ -228,38 +226,44 @@
 
     <div id="about" class="container">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-sm-12">
           <h2>About Us</h2>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
-          <img src="https://www.gravatar.com/avatar/53dc2db8d7a7e643d9a1fbefe15c9f42?s=150" class="img-responsive" />
+        <div class="col-sm-4">
+          <img src="https://www.gravatar.com/avatar/53dc2db8d7a7e643d9a1fbefe15c9f42?s=150" class="img-circle img-thumbnail" />
           <h3>Bret Fisher</h3>
           <strong>CEO and Sysadmin</strong>
           <br>
           <p>
-            Believes Windows Servers deserve better tools for monitoring. Nearly 30 Microsoft certs, and 20 years of managing Windows networks. Remembers the good ol' days of EMM386.EXE, but doesn't miss them.
+            Believes Windows Servers deserve better tools for monitoring.
+            Nearly 30 Microsoft certs, and 20 years of managing Windows.
+            Remembers good ol' days of EMM386.EXE, but doesn't miss them.
           </p>
           <a href="https://twitter.com/BretFisher" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @BretFisher</a>
         </div>
-        <div class="col-md-4">
-          <img src="https://www.gravatar.com/avatar/821840a87c343cf8073dc5f5ce289cbd?s=150" class="img-responsive" />
+        <div class="col-sm-4">
+          <img src="https://www.gravatar.com/avatar/821840a87c343cf8073dc5f5ce289cbd?s=150" class="img-circle img-thumbnail" />
           <h3>Kevin Griffin</h3>
           <strong>CTO and Lead Developer</strong>
           <br>
           <p>
-            Microsoft MVP, trainer, and conference speaker. User Group Leader. Loves .NET along with Node.js and Open Source. Kills code bugs with bacon.
+            Microsoft MVP, trainer, and conference speaker.
+            User Group Leader. Loves .NET along with Node.js and Open Source.
+            Kills code bugs with bacon.
           </p>
           <a href="https://twitter.com/1kevgriff" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @1kevgriff</a>
         </div>
-        <div class="col-md-4">
-          <img src="https://www.gravatar.com/avatar/da5e4f42f7924b08916f814825321220?s=150" class="img-responsive" />
+        <div class="col-sm-4">
+          <img src="https://www.gravatar.com/avatar/da5e4f42f7924b08916f814825321220?s=150" class="img-circle img-thumbnail" />
           <h3>Joe The Man</h3>
           <strong>Chief Monitor</strong>
           <br>
           <p>
-            Our mascott, and always-dilligent alert robot. Likes "Ship It" squirrels. Dreams of being a real boy.
+            Our mascott, and always-dilligent alert robot. Likes
+            <a href="https://www.google.com/search?site=imghp&tbm=isch&q=ship+it+squirrel" title="Google Search of Squirrels">
+              "Ship It" squirrels</a>. Dreams of being a real boy.
           </p>
           <a href="https://twitter.com/winsitter" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @winsitter</a>
         </div>
