--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Windows Server Monitoring Made Easy. We run the monitoring platform, you add your servers and control your notifications. Works with any Windows Server.">
+  <meta name="description" content="Windows Server Monitoring Made Easy. We run the monitoring platform; you add servers and control your notifications. Works with any Windows Server.">
   <link rel="shortcut icon" href="favicon.ico">
 
   <title>{{title}} | Winsitter</title>
